# crossexpand

./: .gitignore  CMakeLists.txt  DAY2_PLAN.md  DAY2_STATUS.md  DAY3_COMPLETE.md  DAY3_PLAN.md  DAY3_STATUS_REPORT.sh  DEMO_DAY3.sh  EXECUTION_GUIDE.md  FINAL_SUCCESS.md  FINAL_SUMMARY.sh  README.md  README_new.md  READY_TO_USE.md  WORKSPACE_CLEANUP_COMPLETE.md  demo_professional.sh  quick_start.sh  quick_test.sh  run.sh
config/: default.json
docs/: DAY1_COMPLETE.md  DAY2_COMPLETE.md  architecture.md
include/core/: advanced_template_engine.hpp  enhanced_text_injector.hpp  event_queue.hpp  input_manager.hpp  memory_pool.hpp  multithreaded_processor.hpp  plugin_system.hpp  template_engine.hpp  text_injector.hpp
include/gui/: web_gui.hpp
include/utils/: config_manager.hpp  logger.hpp  performance_monitor.hpp
scripts/: demo.sh
src/: demo_day2.cpp  demo_day2_simple.cpp  main.cpp  main_day2.cpp  main_day3.cpp  test_day3_simple.cpp
src/core/: advanced_template_engine.cpp  enhanced_text_injector.cpp  event_queue.cpp  globals.cpp  memory_pool.cpp  multithreaded_processor.cpp  plugin_system.cpp  template_engine.cpp
src/gui/: web_gui.cpp  web_server.cpp
src/platform/linux/: x11_input_manager.cpp  x11_text_injector.cpp
src/plugins/: code_snippet_plugin.cpp
src/utils/: config_manager.cpp  logger.cpp  performance_monitor.cpp
tests/: test_advanced.cpp  test_basic.cpp
